# openmisp

./: .env.dist  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml
SUMMARY/: index.html
api-reference/: index.html
api-reference/attributes/: index.html
api-reference/clusters/: index.html
api-reference/events/: index.html
api-reference/galaxies/: index.html
api-reference/misp/: index.html
api-reference/objects/: index.html
api-reference/organizations/: index.html
api-reference/server/: index.html
api-reference/sharing_groups/: index.html
api-reference/sightings/: index.html
api-reference/tags/: index.html
api-reference/taxonomies/: index.html
api-reference/validators/: index.html
docs/: SUMMARY.md  cheatsheet.md  index.md
docs/examples/: basic_usage.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: attributes.md  clusters.md  events.md  galaxies.md  misp.md  objects.md  organizations.md  server.md  sharing_groups.md  tags.md
examples/basic_usage/: index.html
getting-started/installation/: index.html
getting-started/methods-overview/: index.html
getting-started/quickstart/: index.html
reference/attributes/: index.html
reference/clusters/: index.html
reference/events/: index.html
reference/galaxies/: index.html
reference/misp/: index.html
reference/objects/: index.html
reference/organizations/: index.html
reference/server/: index.html
reference/sharing_groups/: index.html
reference/tags/: index.html
scripts/: gen_ref_nav.py  generate_misp_models.py  generate_taxonomy_models.py
search/: search_index.json
src/confidence/: confidence.py
src/confidence/utils/: __init__.py  base.py  confidence.py
src/examples/: example1.py  example2.py  example3.py  example4.py  taxonomy_example.py
src/openmisp/: __init__.py  attributes.py  clusters.py  events.py  galaxies.py  misp.py  objects.py  organizations.py  server.py  sharing_groups.py  sightings.py  tags.py  taxonomies.py  validators.py
src/openmisp/datasets/: __init__.py
src/openmisp/datasets/taxonomies/: __init__.py  loader.py
src/openmisp/models/: __init__.py  attributes.py  common.py  objects.py  sightings.py
src/openmisp/models/taxonomies/: README.md  __init__.py  access_method.py  accessnow.py  acs_marking.py  action_taken.py  admiralty_scale.py  adversary.py  ais_marking.py  analyst_assessment.py  approved_category_of_action.py  artificial_satellites.py  aviation.py  binary_class.py  cccs.py  cert_xlm.py  circl.py  cnsd.py  coa.py  collaborative_intelligence.py  common_taxonomy.py  copine_scale.py  course_of_action.py  crowdsec.py  cryptocurrency_threat.py  csirt_americas.py  csirt_case_classification.py  cssa.py  cti.py  current_event.py  cyber_threat_framework.py  cycat.py  cytomic_orion.py  dark_web.py  data_classification.py  ddos.py  (+123 more)
(+3 files in other folders)
